// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<input-field-component> matches snapshot (default stacked layout) 1`] = `
<input-field-component input-id="first" label="First Name" value="Ada">
  <div>
    <div class="form-group">
      <label class="form-control-label label-sm" htmlfor="first">
        <span>
          First Name
        </span>
      </label>
      <input aria-labelledby="firstName" class="form-control" id="first" name="firstName" placeholder="First Name" type="text" value="Ada">
    </div>
  </div>
</input-field-component>
`;

exports[`<input-field-component> matches snapshot (horizontal with validation) 1`] = `
<input-field-component form-layout="horizontal" input-cols="xs-12 sm-9" input-id="email" label="Email" label-cols="xs-12 sm-3" validation="" validation-message="Please enter a valid email." value="">
  <div class="horizontal">
    <div class="form-group row">
      <label class="col-12 col-form-label col-sm-3 form-control-label invalid label-sm no-padding" htmlfor="email">
        <span>
          Email:
        </span>
      </label>
      <div class="col-12 col-sm-9">
        <div>
          <input aria-describedby="validationMessage" aria-labelledby="email" class="form-control is-invalid" id="email" name="email" placeholder="Email" type="text">
          <div class="form-text invalid-feedback" id="validationMessage">
            Please enter a valid email.
          </div>
        </div>
      </div>
    </div>
  </div>
</input-field-component>
`;
